Agrego estadisticas de uso al informe y correccion al punto 9

--- a/informe.ipynb
+++ b/informe.ipynb
@@ -2502,6 +2502,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -2530,6 +2531,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -2758,6 +2760,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -2790,6 +2793,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -2910,6 +2914,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -3045,6 +3050,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -3117,6 +3123,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -3501,7 +3508,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gYf :: Writer Log Int\n",
@@ -3547,7 +3556,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data Maybe a = Nothing | Just a"
@@ -3570,7 +3581,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "padre :: String -> Maybe String\n",
@@ -4388,6 +4401,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -4416,6 +4430,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -5189,6 +5204,34 @@
     "- Es un lenguage creado para investigacion y desarrollo. Sirvió como base para otros lenguages funcionales. Nunca tuvo objetivo comercial/industrial.\n",
     "- Nunca tuvo la banca de una gran compañía. Es de gran ayuda que una empresa de renombre acompañe el desarrollo del lenguaje, como paso con Go de google, u Objective-C o Swift en Apple. Algunas empresas, como Facebook, utilizan Haskell pero no en partes Core de su desarrollo, sino para aplicaciones auxiliares.\n",
     "- Es funcional. Para comenzar a programar, normalmente se utiliza un lenguaje orientado a objetos, además de que se utiliza en gran porcentaje en la industria. Por lo cual, aprender Haskell no es como aprender un lenguaje más, sino que requiere entender un paradigma que es totalmente diferente. Más allá de que Haskell sea un lenguaje sencillo, aprender/entender el paradigma funcional es lo que hace que la curva de aprendizaje al principio sea de lento crecimiento."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Estadísticas de uso"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stack Overflow(2017) : \n",
+    "\n",
+    "- Puesto 1: Javascript -> 62.5%\n",
+    "- ...\n",
+    "- ...\n",
+    "- ...   \n",
+    "- Puesto 25: Haskell -> 1.8%\n",
+    "\n",
+    "### Github(2018):\n",
+    "\n",
+    "- Puesto 1: Javascript -> 324000 repositorios\n",
+    "- ...\n",
+    "- ...\n",
+    "- ...\n",
+    "- Puesto 21: Haskell -> 8700 repositorios"
    ]
   },
   {
